Delete: Delete display ID
