# sos21-api-server/src/handler/model/project.rs
@@ -82,7 +82,6 @@ pub struct Project {
     pub id: ProjectId,
     pub code: String,
     pub created_at: DateTime<Utc>,
-    pub display_id: String,
     pub owner_id: UserId,
     pub owner_name: UserName,
     pub owner_kana_name: UserKanaName,
@@ -101,7 +100,6 @@ impl Project {
             id: ProjectId::from_use_case(project.id),
             code: project.code,
             created_at: project.created_at,
-            display_id: project.display_id,
             owner_id: UserId::from_use_case(project.owner_id),
             owner_name: UserName::from_use_case(project.owner_name),
             owner_kana_name: UserKanaName::from_use_case(project.owner_kana_name),
