# sos21-use-case/src/model/project.rs
@@ -78,7 +78,6 @@ pub struct Project {
     pub id: ProjectId,
     pub code: String,
     pub created_at: DateTime<Utc>,
-    pub display_id: String,
     pub owner_id: UserId,
     pub owner_name: UserName,
     pub owner_kana_name: UserKanaName,
@@ -101,7 +100,6 @@ impl Project {
             id: ProjectId::from_entity(project.id),
             code: project.code().to_string(),
             created_at: project.created_at.utc(),
-            display_id: project.display_id.into_string(),
             owner_id: UserId::from_entity(project.owner_id),
             owner_name: UserName::from_entity(owner_name),
             owner_kana_name: UserKanaName::from_entity(owner_kana_name),
